# tidecoin

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  docker-entrypoint.sh  vcpkg.json
.github/workflows/: build_and_release_image.yml  ci.yml  deploy_service.yml
.tx/: config
ci/: README.md  lint_imagefile
ci/lint/: 06_script.sh  container-entrypoint.sh
ci/test/: 00_setup_env.sh  00_setup_env_arm.sh  00_setup_env_i686_no_ipc.sh  00_setup_env_mac_cross.sh  00_setup_env_mac_native.sh  00_setup_env_mac_native_fuzz.sh  00_setup_env_native_asan.sh  00_setup_env_native_centos.sh  00_setup_env_native_extended_debug.sh  00_setup_env_native_fuzz.sh  00_setup_env_native_fuzz_with_msan.sh  00_setup_env_native_fuzz_with_valgrind.sh  00_setup_env_native_msan.sh  00_setup_env_native_nowallet_libtidecoinkernel.sh  00_setup_env_native_tidy.sh  00_setup_env_native_tsan.sh  00_setup_env_native_valgrind.sh  00_setup_env_s390x.sh  00_setup_env_win64.sh  01_base_install.sh  02_run_container.py  02_run_container.sh  03_test_script.sh
cmake/: crc32c.cmake  introspection.cmake  minisketch.cmake  tidecoin-build-config.h.in
cmake/module/: AddBoostIfNeeded.cmake  GenerateSetupNsi.cmake  Maintenance.cmake
cmake/script/: Coverage.cmake  GenerateBuildInfo.cmake
contrib/: README.md  valgrind.supp
contrib/debian/: copyright
contrib/devtools/: check-deps.sh  check_pq_vendor.py  copyright_header.py  gen_mining_mainnet_alt_tide.py  gen_regtest_assumeutxo.sh
contrib/guix/: guix-build  guix-codesign  manifest.scm
contrib/linearize/: example-linearize.cfg
contrib/utxo-tools/: utxo_to_sqlite.py
contrib/verify-commits/: README.md  gpg.sh  pre-push-hook.sh  verify-commits.py
depends/: Makefile  README.md  description.md  packages.md  toolchain.cmake.in
deploy/testnet/: tidecoin.conf.template  tidecoind.compose.yml.template
doc/: benchmarking.md  developer-notes.md  docker-testnet-deploy.md  external-signer.md  i2p.md  multiprocess.md  pq-rpc.md  productivity.md  project_identity_refactory.md  reduce-memory.md  release-notes.md  release-process.md  tor.md  translation_process.md  translation_strings_policy.md  whitepaper.md
doc/design/: libraries.md  multiprocess.md
doc/man/: tidecoin-cli.1  tidecoin-qt.1  tidecoin-tx.1  tidecoin-util.1  tidecoin-wallet.1  tidecoin.1  tidecoind.1
share/: setup.nsi.in
share/pixmaps/: tidecoin128.xpm  tidecoin16.xpm  tidecoin256.xpm  tidecoin32.xpm  tidecoin64.xpm
share/qt/: Info.plist.in  translate.cmake
src/: CMakeLists.txt  addrdb.cpp  addrman.cpp  bip324_pq.h  clientversion.cpp  clientversion.h  dbwrapper.h  headerssync.cpp  init.cpp  net.cpp  net_processing.cpp  net_processing.h  netbase.cpp  pow.cpp  pow.h  random.cpp  randomenv.cpp  rest.cpp  tidecoin-cli-res.rc  tidecoin-cli.cpp  tidecoin-res.rc  tidecoin-tx-res.rc  tidecoin-tx.cpp  tidecoin-util-res.rc  tidecoin-util.cpp  tidecoin-wallet-res.rc  tidecoin-wallet.cpp  tidecoin.cpp  tidecoind-res.rc  tidecoind.cpp  txdb.cpp  txdb.h  validation.cpp  validation.h  versionbits.cpp  versionbits_impl.h
src/bench/: CMakeLists.txt  bench.cpp  bench.h  bench_tidecoin.cpp  block_assemble.cpp  checkblock.cpp  descriptors.cpp  readwriteblock.cpp  txorphanage.cpp  wallet_balance.cpp  wallet_create_tx.cpp  wallet_ismine.cpp
src/common/: args.cpp  args.h  config.cpp  init.cpp  netif.cpp  run_command.cpp  settings.cpp  signmessage.cpp  system.cpp  system.h
src/consensus/: params.h
src/crypto/: CMakeLists.txt  scrypt-sse2.cpp  scrypt.cpp  scrypt.h
src/index/: coinstatsindex.cpp
src/init/: common.cpp
src/interfaces/: wallet.h
src/ipc/: CMakeLists.txt  context.h  exception.h  interfaces.cpp  process.cpp  process.h  protocol.h
src/kernel/: CMakeLists.txt  (+3 more)
src/qt/: CMakeLists.txt  README.md  askpassphrasedialog.cpp  bitcoinstrings.cpp  clientmodel.cpp  coincontroldialog.cpp  createwalletdialog.cpp  guiutil.cpp  guiutil.h  initexecutor.h  intro.cpp  main.cpp  modaloverlay.cpp  networkstyle.cpp  notificator.cpp  notificator.h  optionsdialog.cpp  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  paymentserver.cpp  paymentserver.h  psbtoperationsdialog.cpp  qrimagewidget.cpp  qvalidatedlineedit.cpp  receivecoinsdialog.cpp  receiverequestdialog.cpp  recentrequeststablemodel.cpp  rpcconsole.cpp  rpcconsole.h  sendcoinsdialog.cpp  signverifymessagedialog.cpp  splashscreen.cpp  splashscreen.h  tidecoin.cpp  tidecoin.h  tidecoin.qrc  tidecoin_locale.qrc  tidecoinaddressvalidator.cpp  tidecoinaddressvalidator.h  (+17 more)
src/qt/forms/: addressbookpage.ui  debugwindow.ui  helpmessagedialog.ui  modaloverlay.ui  openuridialog.ui  overviewpage.ui  receivecoinsdialog.ui  receiverequestdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: CMakeLists.txt  bitcoin_ar.ts  bitcoin_cs.ts  bitcoin_es.ts  bitcoin_fr.ts  bitcoin_ga.ts  bitcoin_ga_IE.ts  bitcoin_hu.ts  bitcoin_ja.ts  bitcoin_nl.ts  bitcoin_ru.ts  bitcoin_sk.ts  bitcoin_zh_HK.ts  tidecoin_am.ts  tidecoin_ar.ts  tidecoin_ast_ES.ts  tidecoin_az.ts  tidecoin_az@latin.ts  tidecoin_be.ts  tidecoin_bg.ts  tidecoin_bn.ts  tidecoin_br.ts  tidecoin_bs.ts  tidecoin_ca.ts  tidecoin_cmn.ts  tidecoin_cs.ts  tidecoin_cy.ts  tidecoin_da.ts  tidecoin_de.ts  tidecoin_el.ts  tidecoin_en.ts  tidecoin_en.xlf  tidecoin_eo.ts  tidecoin_es.ts  tidecoin_et.ts  tidecoin_eu.ts  tidecoin_fa.ts  tidecoin_fi.ts  tidecoin_fil.ts  tidecoin_fo.ts  (+73 more)
src/qt/res/: tidecoin-qt-res.rc
src/qt/res/icons/: tidecoin.icns
src/qt/test/: CMakeLists.txt  apptests.cpp  optiontests.cpp  rpcnestedtests.cpp  test_main.cpp  wallettests.cpp
src/wallet/: CMakeLists.txt  dump.cpp  init.cpp  interfaces.cpp  scriptpubkeyman.cpp  scriptpubkeyman.h  spend.cpp  sqlite.cpp  wallet.cpp  wallet.h  walletdb.cpp  wallettool.cpp
src/wallet/rpc/: addresses.cpp  spend.cpp  util.cpp  wallet.cpp
src/wallet/test/: CMakeLists.txt  coinselector_tests.cpp  scriptpubkeyman_tests.cpp  wallet_tests.cpp  walletload_tests.cpp
src/wallet/test/fuzz/: CMakeLists.txt
src/zmq/: CMakeLists.txt
test/: CMakeLists.txt  README.md  config.ini.in
(+171 files in other folders)
